modified add income business logics